# Implementation-of-Field-Area-Segmentation-Model

./: .gitignore  README.md
code/: base_env.yml  field-area-segmentation-semantic-dataset-v8.ipynb  pyproject.toml
website/index/: index.html
website/index/style/: style.css
website/sign-in/: sign-in.html
website/sign-in/style/: style.css
website/sign-up/: sign-up.html
website/sign-up/style/: style.css
